* Bugfix: Timerange date selector had to high z-index * Changed: Padding of inline filter forms to prevent layout problems

--- a/core/asset/css/inline-filters.css
+++ b/core/asset/css/inline-filters.css
@@ -2,7 +2,7 @@
 	basic
    ---------------------------*/
 .inlineFilters {
-	padding:7px;
+	padding:6px;
 	margin-bottom:10px;
 	background-color:#eee;
 }
